Incluimos el Login Controller, se encarga de autenticar usuarios y generar una token para estos...

--- a/ApiTickets/ApiTickets/Web.config
+++ b/ApiTickets/ApiTickets/Web.config
@@ -27,8 +27,8 @@
 
     <!-- VARIABLES DE CONFIGURACIÓN JWT -->
     <add key="ClaveSecreta" value="OLAh6Yh5KwNFvOqgltw7" />
-    <add key="Issuer" value="www.rafaelacosta.net" />
-    <add key="Audience" value="www.rafaelacosta.net/api/miwebapi" />
+    <add key="Issuer" value="www.reservaTickets.net" />
+    <add key="Audience" value="www.reservaTickets.net/api/miwebapi" />
     <add key="Expires" value="24" />
     <!-- En Horas -->
 
@@ -45,7 +45,7 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <add name="PticketsEntities" connectionString="metadata=res://*/TicketDatosModel.csdl|res://*/TicketDatosModel.ssdl|res://*/TicketDatosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-V624IOEV;initial catalog=Ptickets;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PticketsEntities" connectionString="metadata=res://*/TicketDatosModel.csdl|res://*/TicketDatosModel.ssdl|res://*/TicketDatosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-H1D9TKG;initial catalog=Ptickets;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   
   
