--- a/ApiTickets/ConectarDatos/App.Config
+++ b/ApiTickets/ConectarDatos/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="PticketsEntities" connectionString="metadata=res://*/TicketDatosModel.csdl|res://*/TicketDatosModel.ssdl|res://*/TicketDatosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-V624IOEV;initial catalog=Ptickets;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PticketsEntities" connectionString="metadata=res://*/TicketDatosModel.csdl|res://*/TicketDatosModel.ssdl|res://*/TicketDatosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-H1D9TKG;initial catalog=Ptickets;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
