--- a/ApiTickets/ApiTickets/Web.config
+++ b/ApiTickets/ApiTickets/Web.config
@@ -23,16 +23,7 @@
   </appSettings>
 
 
-  <appSettings>
-
-    <!-- VARIABLES DE CONFIGURACIÓN JWT -->
-    <add key="ClaveSecreta" value="OLAh6Yh5KwNFvOqgltw7" />
-    <add key="Issuer" value="www.reservaTickets.net" />
-    <add key="Audience" value="www.reservaTickets.net/api/miwebapi" />
-    <add key="Expires" value="24" />
-    <!-- En Horas -->
-
-  </appSettings>
+  
 
   
   
@@ -45,7 +36,7 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <add name="PticketsEntities" connectionString="metadata=res://*/TicketDatosModel.csdl|res://*/TicketDatosModel.ssdl|res://*/TicketDatosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-H1D9TKG;initial catalog=Ptickets;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PticketsEntities" connectionString="metadata=res://*/TicketDatosModel.csdl|res://*/TicketDatosModel.ssdl|res://*/TicketDatosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-V624IOEV;initial catalog=Ptickets;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   
   
@@ -97,12 +88,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
@@ -113,4 +98,10 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+    </compilers>
+  </system.codedom>
 </configuration>
