Arreglado error para filas

--- a/ApiTickets/ApiTickets/Web.config
+++ b/ApiTickets/ApiTickets/Web.config
@@ -36,7 +36,7 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <add name="PticketsEntities" connectionString="metadata=res://*/TicketDatosModel.csdl|res://*/TicketDatosModel.ssdl|res://*/TicketDatosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-V624IOEV;initial catalog=Ptickets;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PticketsEntities" connectionString="metadata=res://*/TicketDatosModel.csdl|res://*/TicketDatosModel.ssdl|res://*/TicketDatosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ptickets.database.windows.net;initial catalog=Ptickets;;User ID=nero;Password=Ner0_1245;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   
   
